[MOD] Changed slideshow's nav bar icons (now it's svg) on homepage and JS-code (minor) for it, also changed scrollbar of all pages not just in gallery's modalbox. [FIX] Minor fixes in styles.

--- a/src/styles/gallery/gallery.css
+++ b/src/styles/gallery/gallery.css
@@ -30,3 +30,16 @@ p {
   margin: 0;
   padding: 0;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(230, 247, 255);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ff3f40;
+}
